[gd_scene load_steps=5 format=3 uid="uid://eqqk1uve143x"]

[ext_resource type="Script" path="res://core/ui/components/dialog.gd" id="1_yqaeg"]
[ext_resource type="PackedScene" uid="uid://bw8113ocotx2r" path="res://core/systems/effects/fade_effect.tscn" id="2_q0yos"]
[ext_resource type="PackedScene" uid="uid://ekhjpmat02f8" path="res://core/systems/effects/slide_effect.tscn" id="3_hbrr5"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="4_vp527"]

[node name="Dialog" type="Control" groups=["dialog", "popup"]]
editor_description = "Opens a dialog choice to the user."
z_index = 60
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yqaeg")

[node name="FadeEffect" parent="." node_paths=PackedStringArray("target") instance=ExtResource("2_q0yos")]
unique_name_in_owner = true
target = NodePath("..")
fade_speed = 0.2
on_signal = "opened"
fade_out_signal = "closed"
on_signal = "opened"

[node name="SlideEffect" parent="." node_paths=PackedStringArray("target") instance=ExtResource("3_hbrr5")]
target = NodePath("../Spacer")
slide_speed = 0.4
margin = 0
direction = "up"
on_signal = "opened"
slide_out_signal = "closed"
on_signal = "opened"

[node name="Spacer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="Spacer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -188.5
offset_top = -58.5
offset_right = 148.5
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Spacer/CenterContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_type_variation = &"Dialog"

[node name="MarginContainer" type="MarginContainer" parent="Spacer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Spacer/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Spacer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "This is a dialog message with some text in it"
horizontal_alignment = 1
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Spacer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Spacer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="FocusGroup" parent="Spacer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_vp527")]

[node name="CancelButton" type="Button" parent="Spacer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../ConfirmButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../ConfirmButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../ConfirmButton")
focus_previous = NodePath("../ConfirmButton")
text = "No"

[node name="ConfirmButton" type="Button" parent="Spacer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../CancelButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../CancelButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../CancelButton")
focus_previous = NodePath("../CancelButton")
text = "Yes"
